--- a/products/src/app/top-bar/top-bar.component.html
+++ b/products/src/app/top-bar/top-bar.component.html
@@ -2,4 +2,4 @@
     <h1>AliExpress</h1>
 </a>
 
-<a class="button fancy-button"><i class="material-icons"></i>Checkout</a>
+<a href="https://login.aliexpress.ru/" class="button fancy-button" target="_blank"><i class="material-icons"></i>Login</a>
