--- a/products/src/app/app.component.css
+++ b/products/src/app/app.component.css
@@ -1,3 +1,11 @@
-p {
-    font-family: Lato;
-  }
+app-category {
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    background-color: rgb(243, 243, 243);
+    border-bottom: 1px solid rgb(230, 230, 230);
+}
+router-outlet {
+    display: flex;
+    flex-wrap: wrap;
+}
