--- a/products/src/app/app.component.html
+++ b/products/src/app/app.component.html
@@ -1,5 +1,2 @@
-<app-top-bar></app-top-bar>
-
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<app-category></app-category>
+<router-outlet></router-outlet>
