--- a/products/src/app/category/category.component.css
+++ b/products/src/app/category/category.component.css
@@ -5,8 +5,8 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 150px;
-    height: 50px;
+    min-width: 250px;
+    min-height: 50px;
     border-left: 1px solid rgb(230, 230, 230);
     border-right: 1px solid rgb(230, 230, 230);
 }
@@ -17,11 +17,10 @@
 }
 
 .categories {
-    flex: 1 150px;
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
+    flex-wrap: wrap;
     justify-content: space-around;
+    flex-grow: 1;
 }
 
 a {
@@ -33,11 +32,13 @@ a {
     background-color: rgb(242, 242, 242);
     display: flex;
     font-weight: 900;
-    width: 100px;
+    min-width: 100px;
+    min-height: 50px;
     align-items: center;
     justify-content: space-around;
     transition: 0.4s;
     border-right: 1px solid rgb(230, 230, 230);
+    border-left: 1px solid rgb(230, 230, 230);
 }
 
 .head:hover {
