--- a/PROJECT/officeRegistrator/src/app/course-files/course-files.component.html
+++ b/PROJECT/officeRegistrator/src/app/course-files/course-files.component.html
@@ -1,3 +1,7 @@
-<div>
-    
-</div>
+<header>
+    <h1>Files</h1>
+</header>
+
+<main class="warning">
+    not Finished yet<!--Template-->
+</main>
