--- a/PROJECT/officeRegistrator/src/app/welcome/welcome.component.html
+++ b/PROJECT/officeRegistrator/src/app/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div [class.hidden]="!s" class="welcome-content" id="welcome">
+<div [class.hidden]="!u" class="welcome-content" id="welcome">
     <div class="m">
         <div class="menu block" onclick="
             if(document.getElementById('sh').classList.contains('hidden'))
@@ -36,21 +36,23 @@
             <span class="o f">Main Menu</span>
             <span class="o">Attestation</span>
             <span class="o">Courses</span>
-            <span class="o">Files</span>
+            <a routerLink="/files" style="text-decoration: none; color: inherit;">
+                <span class="o">Files</span>
+            </a>
             <span class="e o" onclick="document.cookie='userPassword=;expires=Thu; 01 Jan 1970; path=/'; location.reload()">Log out</span>
         </div>
     </div>
 
     <header id="background">
-        <h1>{{ title }}, {{ s.name }}</h1>
+        <h1>{{ title }}, {{ u.name }}</h1>
     </header>
 
     <main>
         <h2>News</h2>
         <div class="news block">
-            <div class="new" *ngFor="let n of newsCount">
-                <h3> {{ s.newHeaders[n] }} </h3>
-                <h4> {{ s.news[n] }} </h4>
+            <div class="new" *ngFor="let n of news">
+                <h3> {{ n.title }} </h3>
+                <h4> {{ n.body }} </h4>
             </div>
         </div>
 
@@ -98,7 +100,7 @@
                         </div>
                         <div *ngIf="sch[y][x]" class="something" [style]="x == day && y + 8 == hour ? 'background-color: rgb(144,174,210); font-weight: 600' : ''">
                             <span class="i">{{ sch[y][x].name }}</span>
-                            <span class="i">{{ sch[y][x].cabinet }}</span>
+                            <span class="i">{{ sch[y][x].room }}</span>
                         </div>
                     </div>
                 </div>
