--- a/PROJECT/officeRegistrator/src/app/course-files/course-files.component.css
+++ b/PROJECT/officeRegistrator/src/app/course-files/course-files.component.css
@@ -10,3 +10,7 @@
     background-color: rgb(230,230,230);
     font-family: Arial, Helvetica, sans-serif;
 }
+
+header {
+    font-family: Arial, Helvetica, sans-serif;
+}
