--- a/PROJECT/officeRegistrator/src/app/welcome/welcome.component.css
+++ b/PROJECT/officeRegistrator/src/app/welcome/welcome.component.css
@@ -1,13 +1,211 @@
 .welcome-content {
-    display: flex;
-    align-content: center;
-    flex-flow: column wrap;
-    font-family: Corbel;
-    padding-top: 25px;
+    background: linear-gradient(#404243, #d7dadc);
 }
 
-.something {
+header {
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 55px;
+    background-color: #3c3e41;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: rgb(175, 175, 175);
+}
+
+main {
+    margin-top: 60px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.block {
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+    background-color: #232324;
+    color: rgb(200, 200, 200);
+}
+
+.name {
+    color: #4d8973;
+}
+
+.main-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    min-width: 350px;
+}
+
+.header-link {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    min-width: 100px;
+    height: 50px;
+    border-radius: 15px;
+    transition: 0.2s;
+    user-select: none;
+    font-weight: 600;
+}
+
+.header-link:hover {
+    color: rgb(80, 80, 80);
+    transition: 0.2s;
+    background-color: rgb(175, 175, 175);
+    cursor: pointer;
+}
+
+.before {
+    visibility: visible;
+    transition: 0.1s;
+}
+
+.end {
+    border-bottom: 1px solid rgb(150,150,150);
+}
+
+.before1 {
+    transform: none;
+    top: 0;
+    transition: 0.2s;
+}
+
+.before2 {
+    transform: none;
+    bottom: 0;
+    transition: 0.2s;
+}
+
+.after {
+    visibility: hidden;
+    transition: 0.1s;
+}
+
+.after1 {
+    transform: rotate(45deg);
+    top: 5.5px;
+    transition: 0.2s;
+}
+
+.after2 {
+    transform: rotate(-45deg);
+    bottom: 5.5px;
+    transition: 0.2s;
+}
+
+.ml {
+    display: block;
+    position: relative;
+    width: 15px;
+    height: 2.5px;
+    background-color: #e4e4e4;
+    margin-bottom: 3px;
+}
+
+.btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     transition: 0.3s;
+    min-width: 50px;
+    height: 55px;
+    user-select: none;
+}
+
+.btn:hover {
+    transition: 0.3s;
+    background-color: #545557;
+    cursor: pointer;
+}
+
+.right-menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.right {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.search {
+    background-color: #3c3e41;
+    border: 1.5px solid #d4d4d4;
+    border-radius: 15px;
+    color: white;
+    padding: 5px;
+    padding-left: 10px;
+    transition: 0.3s;
+}
+
+.search:hover {
+    background-color: #5b5d60;
+    transition: 0.3s;
+}
+
+.search:focus {
+    outline: none;
+}
+
+.menu {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top: 55px;
+    left: 0px;
+    background-color: #48494b;
+    height: 100%;
+    min-width: 200px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    left: 0px;
+    transition: 0.3s;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+    z-index: 50;
+}
+
+.menu-contents {
+    display: block;
+    width: 100%;
+}
+
+.menu-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    min-height: 40px;
+    user-select: none;
+    color: white;
+}
+
+.menu-content:hover {
+    background-color: #6e6f71;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.hidden {
+    left: -200px;
+    transition: 0.3s;
+}
+.something {
+    transition: 0.3s; 
+    color: black;
     background-color: rgb(245,245,245);
 }
 
@@ -17,15 +215,9 @@
     background-color: rgb(210,210,210);
 }
 
-.block {
+.news {
     display: flex;
     flex-direction: column;
-    border: 1px solid rgb(245,245,245);
-    border-radius: 15px;
-    padding: 5px;
-    border: 1px solid rgb(200,200,200);
-    background-color: white;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
 }
 
 .days {
@@ -106,175 +298,12 @@
     user-select: none;
 }
 
-h1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
-    user-select: none;
-    top: 25px;
-    left: 75px;
-}
-
-h2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: 0.3s;
-    user-select: none;
-}
-
-h2:hover {
-    transition: 0.3s;
-    background-color: rgb(235,235,235);
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-h3 {
-    text-decoration: underline;
-    font-weight: 700;
-}
-
-h4 {
-    font-weight: 100;
-}
-
 .new {
     border-bottom: 1px solid rgb(200,200,200);
 }
 
 .new:hover {
-    background-color: rgb(245,245,245);
+    background-color: rgb(150,150,150);
+    color: rgb(50, 50, 50);
     cursor: pointer;
-}
-
-.menu {
-    position: fixed;
-    transition: 0.3s;
-    top: 25px;
-    left: 25px;
-}
-
-.last {
-    position: relative;
-    user-select: none;
-    min-width: 150px;
-    left: 15px;
-    top: 75px;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid rgb(245,245,245);
-    border-radius: 15px;
-    border: 1px solid rgb(200,200,200);
-    background-color: white;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
-    transition: 0.3s;
-}
-
-.ml {
-    display: block;
-    position: relative;
-    width: 15px;
-    height: 2.5px;
-    background-color: rgb(150, 150, 150);
-    margin-bottom: 3px;
-    z-index: 100;
-}
-
-.first {
-    position: relative;
-    top: 1px;
-    transition: 0.3s;
-}
-
-.first::after {
-    transition: 0.3s;
-}
-.m {
-    position: fixed;
-    top: 0;
-    left: 0;
-    font-size: 20px;
-    font-family: Calibri;
-    width: 9%;
-}
-
-.menu:hover {
-    transition: 0.3s;
-    background-color: rgb(200, 200, 200);
-    cursor: pointer;
-}
-
-.o {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    border-bottom: 1px solid rgb(220,220,220);
-    transition: 0.1s;
-}
-
-.o:hover {
-    background-color: rgb(175, 175, 175);
-    cursor: pointer;
-}
-
-.f {
-    border-top-left-radius: 13px;
-    border-top-right-radius: 13px;
-}
-
-.e {
-    border-bottom: none;
-    border-bottom-left-radius: 13px;
-    border-bottom-right-radius: 13px;
-}
-
-.hidden {
-    display: none;
-    transition: 0.1s;
-}
-
-.before {
-    visibility: visible;
-    transition: 0.1s;
-}
-
-.before1 {
-    transform: none;
-    top: 0;
-    transition: 0.2s;
-}
-
-.before2 {
-    transform: none;
-    bottom: 0;
-    transition: 0.2s;
-}
-
-.after {
-    visibility: hidden;
-    transition: 0.1s;
-}
-
-.after1 {
-    transform: rotate(45deg);
-    top: 5.5px;
-    transition: 0.2s;
-}
-
-.after2 {
-    transform: rotate(-45deg);
-    bottom: 5.5px;
-    transition: 0.2s;
-}
-
-.foot {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    background-color: rgb(235, 235, 235);
-    border: 1px solid rgb(200, 200, 200);
-    border-radius: 15px;
 }
