--- a/PROJECT/officeRegistrator/src/app/course-files/course-files.component.html
+++ b/PROJECT/officeRegistrator/src/app/course-files/course-files.component.html
@@ -1,7 +1,19 @@
-<header>
-    <h1>Files</h1>
-</header>
-
-<main class="warning">
-    Not Finished yet!<!--Template-->
-</main>
+<app-header></app-header>
+<div class="content">
+    <header>
+        <div *ngFor="let t of title" (click)="go(t)" class="link">
+            <span class="dir"> {{ t.title }} </span> / &nbsp;
+        </div>
+    </header>
+    
+    <main>
+        <div *ngFor="let c of objects" class="obj" (click)="getFiles(c)">
+            <div class="obj-type">
+                <img [src]="c.ico" height="64px"/>
+            </div>
+            <div class="obj-name">
+                <span> {{ c.name }} </span>
+            </div>
+        </div>
+    </main>
+</div>
