--- a/PROJECT/officeRegistrator/src/app/header/header.component.html
+++ b/PROJECT/officeRegistrator/src/app/header/header.component.html
@@ -34,10 +34,10 @@
         <div class="menu-content end" (click)="mainmenu()">
             <span class="section">Main Menu</span>
         </div>
-        <div class="menu-content end">
+        <div class="menu-content end" (click)="alert('Not finished!')">
             <span class="section">Attestation</span>
         </div>
-        <div class="menu-content end">
+        <div class="menu-content end" (click)="alert('Not finished!')">
             <span class="section">Courses</span>
         </div>
         <div class="menu-content end" (click)="files()">
