--- a/PROJECT/officeRegistrator/src/app/welcome/welcome.component.html
+++ b/PROJECT/officeRegistrator/src/app/welcome/welcome.component.html
@@ -1,67 +1,8 @@
-<div [class.hidden]="!u" class="welcome-content" id="welcome">    
+<div [class.hidden]="!u">    
     <app-header></app-header>
     <main>
-        <div class="main-header block">
-            <h2>{{ title }},</h2>
-            <h1 class="name"> {{ u.name }}</h1>
-        </div>
-    
-        <h4>News</h4>
-        <div class="news block">
-            <div class="new" *ngFor="let n of news">
-                <h3> {{ n.title }} </h3>
-                <h4> {{ n.body }} </h4>
-            </div>
-        </div>
-        <h4>Schedule</h4>
-        <div class="schedule block">
-            <div class="days">
-                <div class="x">
-    
-                </div>
-                <div class="day"  [style]="0 == day ? 'background-color: rgb(225,225,225); color: black;' : ''">
-                    Monday
-                </div>
-                <div class="day"  [style]="1 == day ? 'background-color: rgb(225,225,225); color: black;' : ''">
-                    Tuesday
-                </div>
-                <div class="day"  [style]="2 == day ? 'background-color: rgb(225,225,225); color: black;' : ''">
-                    Wednesday
-                </div>
-                <div class="day"  [style]="3 == day ? 'background-color: rgb(225,225,225); color: black;' : ''">
-                    Thursday
-                </div>
-                <div class="day"  [style]="4 == day ? 'background-color: rgb(225,225,225); color: black;' : ''">
-                    Friday
-                </div>
-                <div class="day"  [style]="5 == day ? 'background-color: rgb(225,225,225); color: black;' : ''">
-                    Saturday
-                </div>
-                <div class="day"  [style]="6 == day ? 'background-color: rgb(225,225,225); color: black;' : ''">
-                    Sunday
-                </div>
-            </div>
-            <div class="column">
-                <div *ngFor="let y of bnums" class="row">
-                    <div class="left" [style]="y + 8 == hour ? 'background-color: rgb(225,225,225); color: black;' : ''">
-                        <span>
-                            {{y+8}} : 00 
-                        </span>
-                    </div>
-    
-                    <div *ngFor="let x of anums" class="object">
-                        <div *ngIf="!sch[y][x]" class="nothing" [style]="x == day && y + 8 == hour ? 'background-color: rgb(225,225,225)' : ''">
-                            <div *ngIf="x == day && y + 8 ==  hour">
-                                <img id="line" src="assets/images/line.png" aria-readonly="true" alt="" [style]="'top: ' + (min / 1.143 - 30) + 'px'"/>
-                            </div>
-                        </div>
-                        <div *ngIf="sch[y][x]" class="something" [style]="x == day && y + 8 == hour ? 'background-color: rgb(144,174,210); font-weight: 600' : ''">
-                            <span class="i">{{ sch[y][x].name }}</span>
-                            <span class="i">{{ sch[y][x].room }}</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <app-title [u]="u"></app-title>
+        <app-news></app-news>
+        <app-schedule></app-schedule>
     </main>
 </div>
