--- a/PROJECT/officeRegistrator/src/app/welcome/welcome.component.css
+++ b/PROJECT/officeRegistrator/src/app/welcome/welcome.component.css
@@ -3,5 +3,6 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: column wrap;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
