--- a/PROJECT/officeRegistrator/src/app/welcome/welcome.component.css
+++ b/PROJECT/officeRegistrator/src/app/welcome/welcome.component.css
@@ -1,8 +1,7 @@
 main {
-    margin-top: 55px;
+    margin-top: 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: column wrap;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: inherit;
 }
