--- a/PROJECT/officeRegistrator/src/app/header/header.component.css
+++ b/PROJECT/officeRegistrator/src/app/header/header.component.css
@@ -6,10 +6,8 @@ header {
     left: 0;
     width: 100%;
     height: 55px;
-    background-color: #3c3e41;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+    background-color: #1a1a1b;
     z-index: 100;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: rgb(175, 175, 175);
 }
 
@@ -17,28 +15,25 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    min-width: 100px;
-    height: 50px;
-    border-radius: 15px;
+    min-width: 80px;
+    min-height: 25px;
+    border-radius: 10px;
+    border: 1px solid #343536;
     transition: 0.2s;
     user-select: none;
     font-weight: 600;
 }
 
 .header-link:hover {
-    color: rgb(80, 80, 80);
+    color: #565758;
+    border: 1px solid #565758;
     transition: 0.2s;
-    background-color: rgb(175, 175, 175);
     cursor: pointer;
 }
 
 .before {
     visibility: visible;
     transition: 0.1s;
-}
-
-.end {
-    border-bottom: 1px solid rgb(150,150,150);
 }
 
 .before1 {
@@ -75,7 +70,7 @@ header {
     position: relative;
     width: 15px;
     height: 2.5px;
-    background-color: #e4e4e4;
+    background-color: #b2b4b6;
     margin-bottom: 3px;
 }
 
@@ -111,9 +106,9 @@ header {
 }
 
 .search {
-    background-color: #3c3e41;
-    border: 1.5px solid #d4d4d4;
-    border-radius: 15px;
+    background-color: #272729;
+    border: 1px solid #565758;
+    border-radius: 10px;
     color: white;
     padding: 5px;
     padding-left: 10px;
@@ -121,7 +116,7 @@ header {
 }
 
 .search:hover {
-    background-color: #5b5d60;
+    background-color: #3d3d3e;
     transition: 0.3s;
 }
 
@@ -132,14 +127,14 @@ header {
 .search-btn {
     margin-left: 20px;
     padding: 2.5px 6.5px 6.5px 6.5px;
-    border: 1px solid rgb(175, 175, 175);
+    border: 1px solid #343536;
     border-radius: 15px;
 }
 
 .search-btn:hover {
     cursor: pointer;
-    background-color: rgb(200, 200, 200);
-    color: #232324;
+    background-color: #565758;
+    color: #1b1c1c;
 }
 
 .menu {
@@ -149,13 +144,11 @@ header {
     align-items: center;
     top: 55px;
     left: 0px;
-    background-color: #48494b;
+    background-color: #1a1a1b;
     height: 100%;
     min-width: 200px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     left: 0px;
     transition: 0.3s;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
     z-index: 50;
 }
 
@@ -171,12 +164,13 @@ header {
     justify-content: space-around;
     min-height: 40px;
     user-select: none;
-    color: white;
+    color: #b2b4b6;
+    border-bottom: 1px solid #6f7273;
 }
 
 .menu-content:hover {
-    background-color: #6e6f71;
-    font-weight: 600;
+    background-color: #464849;
+    font-weight: 900;
     cursor: pointer;
 }
 
