--- a/PROJECT/officeRegistrator/src/app/header/header.component.html
+++ b/PROJECT/officeRegistrator/src/app/header/header.component.html
@@ -21,7 +21,7 @@
         </div>
     
         <div class="right-menu">
-            <input type="text" class="search" placeholder="search">
+            <input type="text" class="search" placeholder="Search">
             <div class="search-btn" (click)="search()">
                 <span>go</span>
             </div>
@@ -31,19 +31,19 @@
 
 <div class="menu hidden" id="menu">
     <div class="menu-contents">
-        <div class="menu-content end" (click)="mainmenu()">
+        <div class="menu-content" (click)="mainmenu()">
             <span class="section">Main Menu</span>
         </div>
-        <div class="menu-content end" (click)="alert('Not finished!')">
+        <div class="menu-content" (click)="alert('Not finished!')">
             <span class="section">Attestation</span>
         </div>
-        <div class="menu-content end" (click)="alert('Not finished!')">
+        <div class="menu-content" (click)="alert('Not finished!')">
             <span class="section">Courses</span>
         </div>
-        <div class="menu-content end" (click)="files()">
+        <div class="menu-content" (click)="files()">
             <span class="section">Files</span>
         </div>
-        <div class="menu-content end" (click)="logout()">
+        <div class="menu-content" (click)="logout()">
             <span class="section">Log out</span>
         </div>
     </div>
