--- a/PROJECT/officeRegistrator/src/app/news/news.component.css
+++ b/PROJECT/officeRegistrator/src/app/news/news.component.css
@@ -1,7 +1,8 @@
 .block {
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-    background-color: #232324;
+    background-color: #1a1a1b;
     color: rgb(200, 200, 200);
+    border: 1px solid #343536;
+    border-radius: 10px;
 }
 
 .news {
@@ -14,7 +15,7 @@
 }
 
 .new:hover {
-    background-color: rgb(150,150,150);
+    border-radius: 10px;
     color: rgb(50, 50, 50);
     cursor: pointer;
 }
