--- a/PROJECT/officeRegistrator/src/app/schedule/schedule.component.css
+++ b/PROJECT/officeRegistrator/src/app/schedule/schedule.component.css
@@ -1,6 +1,7 @@
 .block {
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-    background-color: #232324;
+    background-color: #1a1a1b;
+    border: 1px solid #343536;
+    border-radius: 10px;
     color: rgb(200, 200, 200);
 }
 
@@ -25,7 +26,6 @@
 
 .day {
     border: none;
-    font: Calibri;
     border-bottom: 1px solid rgb(175, 175, 175);
     border-left: 1px solid rgb(175, 175, 175);
     border-right: 1px solid rgb(175, 175, 175);
@@ -91,5 +91,4 @@
     height: 3px;
     position: relative;
     z-index: 10;
-    user-select: none;
 }
