--- a/PROJECT/officeRegistrator/src/app/schedule/schedule.component.html
+++ b/PROJECT/officeRegistrator/src/app/schedule/schedule.component.html
@@ -22,7 +22,7 @@
         <div class="day"  [style]="5 == day ? 'background-color: rgb(225,225,225); color: black;' : ''">
             Saturday
         </div>
-        <div class="day"  [style]="6 == day ? 'background-color: rgb(225,225,225); color: black;' : ''">
+        <div class="day end"  [style]="6 == day ? 'background-color: rgb(225,225,225); color: black;' : ''">
             Sunday
         </div>
     </div>
@@ -40,6 +40,7 @@
                         <img id="line" src="assets/images/line.png" aria-readonly="true" alt="" [style]="'top: ' + (min / 1.143 - 30) + 'px'"/>
                     </div>
                 </div>
+
                 <div *ngIf="sch[y][x]" class="something" [style]="x == day && y + 8 == hour ? 'background-color: rgb(144,174,210); font-weight: 600' : ''">
                     <span class="i">{{ sch[y][x].name }}</span>
                     <span class="i">{{ sch[y][x].room }}</span>
