--- a/PROJECT/officeRegistrator/src/styles.css
+++ b/PROJECT/officeRegistrator/src/styles.css
@@ -2,6 +2,8 @@ html, body {
     margin: 0;
     width: 100%;
     height: 100%;
+    font-family: Calibri Light;
+    /*background-color: #030303;*/
 }
 
 app-first-page {
@@ -10,7 +12,6 @@ app-first-page {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background: linear-gradient(#404243, #d7dadc);
 }
 
 app-initial {
@@ -20,5 +21,4 @@ app-initial {
     flex-flow: column wrap;
     align-items: center;
     justify-content: space-around;
-    background: linear-gradient(#404243, #d7dadc);
 }
