--- a/hh-front/src/app/app.component.html
+++ b/hh-front/src/app/app.component.html
@@ -5,7 +5,7 @@
     <button (click)="login()">Login</button>
 </div>
   
-<div class="wrapper" *ngIf="logged">
+<div *ngIf="logged">
     <router-outlet></router-outlet>
     <button (click)="logout()">Logout</button>
 </div>
