--- a/hh-front/src/app/vacancy/vacancy.component.html
+++ b/hh-front/src/app/vacancy/vacancy.component.html
@@ -1,7 +1,7 @@
 <h2>Vacancies</h2>
 
-<div *ngFor="let v of vacancies">
-    <a routerLink="/vacancies/{{v.id}}">
+<div *ngIf="vacancies">
+    <a *ngFor="let v of vacancies" routerLink="/vacancies/{{v.id}}">
         {{ v.name }}
     </a>
 </div>
