--- a/products/src/app/product-item/product-item.component.html
+++ b/products/src/app/product-item/product-item.component.html
@@ -15,7 +15,7 @@
   </h2>
   
   <div id="Image">
-    <img [src]="product.gallery[0]" height="320px" [id]="product.id"/>
+    <img [src]="product.gallery" height="320px" [id]="product.id"/>
   </div>
 
   <ul>
