--- a/products/src/app/product-list/product-list.component.html
+++ b/products/src/app/product-list/product-list.component.html
@@ -4,9 +4,9 @@
     </a>
 </div>
 
-<div class="products">
+<div *ngIf="products" class="products">
     <a *ngFor="let product of products" routerLink="/products/{{product.id}}" class="product">
-        <img [src]="product.gallery[0]" height="288.5px"/>
+        <img [src]="product.gallery" height="288.5px"/>
         <span> {{ product.name }}</span>
     </a>
 </div>
